--- a/src/components/Gradient/index.scss
+++ b/src/components/Gradient/index.scss
@@ -1,8 +1,9 @@
 @import '../../sass/index.scss';
 
 .gradient-container {
-	position: fixed;
+	position: absolute;
 	top: 0;
+	bottom: 0;
 	width: 100%;
 	height: 100%;
 	z-index: 0;
